--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,12 @@
   margin: 0px;
   font-family: 'roboto';
 }
-
+.back-custom {
+  background-color: black;
+}
+.main-card {
+  background-color: #ffffff;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
